# video-coding

./: CMakeLists.txt  README.md  main.cpp
compression/: BitStream.cpp  BitStream.hpp  CabacFsm.cpp  CabacFsm.hpp  Coder.cpp  Coder.hpp  DCT.cpp  DCT.hpp  ExpGolombCodes.cpp  ExpGolombCodes.hpp  Quantization.cpp  Quantization.hpp  Scanning.hpp
compression/common/: global.hpp
src/: Blocks.cpp  Blocks.hpp  main.cpp
src/coding/: Binarization.cpp  Binarization.hpp  BitStream.cpp  BitStream.hpp  CabacFsm.cpp  CabacFsm.hpp  Coder.cpp  Coder.hpp  DCT.cpp  DCT.hpp  ExpGolombCodes.cpp  ExpGolombCodes.hpp  Quantization.cpp  Quantization.hpp  Scanning.cpp
src/coding/BitStream/: BitStream.cpp  BitStream.hpp  BitStreamIO.cpp  BitStreamIO.hpp
src/common/: global.hpp
